tests/lean/simpArgTypeMismatch.lean.expected.out
simpArgTypeMismatch.lean:3:13-3:33: error: application type mismatch
  decide_eq_false Unit
argument
  Unit
has type
  Type : Type 1
but is expected to have type
  ¬?m : Prop
